--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '/assets/styles/variables';
 
+body {
+  font-family: 'Tahoma';
+}
 
+a {
+  color: $red;
+}
