tons of refactoring and added services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav></app-nav>
 <app-subnav></app-subnav>
+<!-- <app-practice></app-practice> -->
 <router-outlet></router-outlet>
