--- a/src/app/purchase-history/purchase-history.component.html
+++ b/src/app/purchase-history/purchase-history.component.html
@@ -2,86 +2,127 @@
   <div class="row">
     <div class="col-12">
       <h3>Club Card Hombre</h3>
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Hey There</h3>
-          <div class="card-text justify-content-between">
-            You have {{ clubCardMember.length }} items in your <strong>purchase history</strong>
-          </div>
-          <a href="#" class="card-link" (click)="isCollapsed = !isCollapsed">Show More Details</a>
-          <a href="#" class="card-link">This is more</a>
-        </div>
-      </div>
     </div>
   </div>
-
-
   <div class="row mt-3">
     <div class="col-12 col-lg-3">
-      <div class="mt-3 mb-3"><strong>Past Purchases</strong></div>
+      <div class="mt-3 mb-3"><strong>Purchase History</strong></div>
       <ul class="list-group">
-        <li class="list-group-item"><a href="#">Last 30 Days</a><span class="badge">22</span></li>
-        <li class="list-group-item"><a href="#">30-60 Days</a><span class="badge">140</span></li>
-        <li class="list-group-item"><a href="#">Most Frequent Items</a> <span class="badge">44</span></li>
+        <li class="list-group-item">
+          <a href="#">Frequent Purchases <span class="badge">{{ data.frequentPurchases.length }}</span></a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">Last 30 Days <span class="badge">{{ data.last30days.length }}</span></a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">Over 30 Days <span class="badge">{{ data.over30days.length }}</span></a>
+        </li>
       </ul>
-      <div class="mt-3 mb-3"><strong>Popular Aisles</strong></div>
+      <div class="mt-2 mb-2"><strong>Departments</strong><span class="badge">{{ data.departments.length }}</span></div>
       <ul class="list-group">
-        <li class="list-group-item"><a href="#">Water &amp; Drinks</a><span class="badge">12</span></li>
-        <li class="list-group-item"><a href="#">Eggs</a><span class="badge">9</span></li>
-        <li class="list-group-item"><a href="#">Pasta &amp; Pasta Sauce</a><span class="badge">8</span></li>
-        <li class="list-group-item"><a href="#">Baking Ingredients</a><span class="badge">6</span></li>
-        <li class="list-group-item"><a href="#">Milk &amp; Cream</a><span class="badge">3</span></li>
+        <li class="list-group-item" *ngFor="let department of data.departments; let i = index">{{ department }}</li>
+        <li class="list-group-item"><a href="#">Show All</a></li>
+      </ul>
+      <div class="mt-2 mb-2"><strong>Aisles</strong></div>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let aisle of data.aisles; let i = index;">
+          {{ aisle }}
+        </li>
+        <li class="list-group-item"><a href="#">Show All</a></li>
+      </ul>
+      <div class="mt-2 mb-2"><strong>Shelves</strong></div>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let shelf of data.shelves; let i = index;">
+          {{ shelf }}
+        </li>
       </ul>
     </div>
     <div class="col-12 col-lg-9">
-      <div class="btn-group mt-2 mb-3" dropdown>
-        <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle" aria-controls="dropdown-basic">
-          Action <span class="caret"></span>
-        </button>
-        <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-          <li role="menuitem"><a class="dropdown-item" href="#">Add to Shopping List</a></li>
-          <li role="menuitem"><a class="dropdown-item" href="#">Add to Delivery Order</a></li>
-          <li role="menuitem"><a class="dropdown-item" href="#">Add to Both</a></li>
-          <li class="divider dropdown-divider"></li>
-          <li role="menuitem"><a class="dropdown-item" href="#">Delete</a>
-          </li>
-        </ul>
+      <!-- Try Tabs / Pills -->
+      <div>
+        <tabset>
+          <tab heading="Frequent ({{ data.frequentPurchases.length }})" id="tab1">
+            <h4 class="mt-4 mb-2">Frequent Items</h4>
+            <p>Following are items you purchase a lot.</p>
+            <table class="table table-hover">
+              <thead>
+                <th>Item</th>
+                <th>Name</th>
+                <th>Last Purchased</th>
+                <th>Add</th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of data.frequentPurchases">
+                  <td><input class="form-check form-check-inline" type="checkbox" value="" id="item{{ i + 1 }}"></td>
+                  <td>{{ item.upcDescription }}</td>
+                  <td>{{ item.lastPurchased }}</td>
+                  <td><button class="btn-default" tooltip="Add to Shopping List"><i class="fa fa-list"></i></button></td>
+                </tr>
+              </tbody>
+            </table>
+          </tab>
+          <tab heading="Last 30 Days ({{ data.last30days.length }})" id="tab2">
+            <h4 class="mt-4 mb-2">Past 30 Days</h4>
+            <p>These are items you purchased with in the last month or so,</p>
+            <table class="table table-hover">
+              <thead>
+                <th>Item</th>
+                <th>Name</th>
+                <th>Last Purchased</th>
+                <th>Add</th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of data.last30days">
+                  <td><input class="form-check form-check-inline" type="checkbox" value="" id="item{{ i + 1 }}"></td>
+                  <td>{{ item.upcDescription }}</td>
+                  <td>{{ item.lastPurchased }}</td>
+                  <td><button class="btn-default" tooltip="Add to Shopping List"><i class="fa fa-list"></i></button></td>
+                </tr>
+              </tbody>
+            </table>
+          </tab>
+          <tab heading="Over 30 Days ({{ data.over30days.length }})" id="tab3">
+            <h4 class="mt-4 mb-2">Over 30 Days</h4>
+            <p>These are items you have not purchased in a while.</p>
+            <table class="table table-hover">
+              <thead>
+                <th>Item</th>
+                <th>Name</th>
+                <th>Last Purchased</th>
+                <th>Add</th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of data.over30days">
+                  <td><input class="form-check form-check-inline" type="checkbox" value="" id="item{{ i + 1 }}"></td>
+                  <td>{{ item.upcDescription }}</td>
+                  <td>{{ item.lastPurchased }}</td>
+                  <td><button class="btn-default" tooltip="Add to Shopping List"><i class="fa fa-list"></i></button></td>
+                </tr>
+              </tbody>
+            </table>
+          </tab>
+          <tab heading="All Purchases ({{ data.clubcard.length }})" id="tab4">
+            <h4 class="mt-4 mb-2">Everything</h4>
+            <p>This is everything you have purchases ad infinitum.</p>
+            <table class="table table-hover">
+              <thead>
+                <th>Item</th>
+                <th>Name</th>
+                <th>Last Purchased</th>
+                <th>Add</th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of data.clubcard">
+                  <td><input class="form-check form-check-inline" type="checkbox" value="" id="item{{ i + 1 }}"></td>
+                  <td>{{ item.upcDescription }}</td>
+                  <td>{{ item.lastPurchased }}</td>
+                  <td><button class="btn-default" tooltip="Add to Shopping List"><i class="fa fa-list"></i></button></td>
+                </tr>
+              </tbody>
+            </table>
+          </tab>
+        </tabset>
       </div>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Item</th>
-            <th>Description</th>
-            <th>Frequency</th>
-            <th>Add</th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let item of clubCardMember; let i = index">
-          <tr>
-            <td>
-              <input class="form-check form-check-inline" type="checkbox" value="" id="item{{ i + 1 }}"> {{ i + 1 }}
-            </td>
-            <td>
-            	<img class="img-fluid" src="https://s7d2.scene7.com/is/image/ABS/{{item.upc}}?$ecom-product-card-desktop$&defaultImage=Not_Available" alt="">
-              {{ item.upcDescription }}
-              <br>
-              <div id="detail{{ i + 1 }}" [collapse]="!isCollapsed">
-                <a href="#" class="badge badge-info badge-pill">{{ item.department }}</a>&nbsp;
-                <a href="#" class="badge badge-info badge-pill">{{ item.aisle }}</a>&nbsp;
-                <a href="#" class="badge badge-info badge-pill">{{ item.shelf }}</a>
-                <br>
-                <small><em>Purchased on {{ item.lastPurchased }}</em></small>
-              </div>
-            </td>
-            <td>
-              <i class="fa fa-star" *ngIf="item.daysBetweenPurchase < 30"></i>
-            </td>
-            <td>
-              <button tooltip="Add to List" class="btn-default"><i class="fa fa-list"></i></button>&nbsp;
-              <button tooltip="Add to Cart" class="btn-default"><i class="fa fa-shopping-cart"></i></button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <!-- End Tabs -->
 
-</div>
+    </div>
